# yalantinglibs

./: .bazeliskrc  .bazelrc  .clang-format  .clang-format-ignore  .gitattributes  .gitignore  BUILD.bazel  CMakeLists.txt  Doxyfile  Doxyfile_cn  MODULE.bazel  NOTICE  README.md  ReleaseNotes.md  WORKSPACE  WORKSPACE.bazel  WORKSPACE.bzlmod  conanfile.py  coverage_gen.sh  demo.cpp  demo.proto  gen_doc.sh  generate_test_certs.bat  header.html  package.json  pb_perf.cpp  person_meta.json  test.cpp  test2.cpp  test_install.sh  vcpkg.json
samples/cpp/example_cmake/: CMakeLists.txt
src/coro_file/examples/: CMakeLists.txt  main.cpp
src/coro_file/tests/: CMakeLists.txt  test_corofile.cpp
src/coro_http/: CMakeLists.txt
src/coro_http/benchmark/: CMakeLists.txt  main.cpp
src/coro_http/examples/: BUILD.bazel  CMakeLists.txt  channel.cpp  chat_room.cpp  client.html  example.cpp  http_ssl_client.cpp  http_ssl_server.cpp  load_balancer.cpp  load_blancer.cpp  main.cpp  ntls_http_client.cpp  ntls_http_server.cpp
src/coro_http/tests/: CMakeLists.txt  main.cpp  test_cinatra.cpp  test_cinatra_websocket.cpp  test_coro_http_server.cpp  test_http_client_filter.cpp  test_http_parse.cpp  test_http_ssl_mutual_auth.cpp  test_mixed.cpp
src/coro_io/tests/: CMakeLists.txt  test_cancel.cpp  test_channel.cpp  test_client_pool.cpp  test_coro_channel.cpp  test_corofile.cpp  test_io_context_pool.cpp  test_load_balancer.cpp  test_load_blancer.cpp  test_rate_limiter.cpp
src/coro_rdma/tests/: CMakeLists.txt  test_device.cpp  test_rdma.cpp
src/coro_rpc/: CMakeLists.txt
src/coro_rpc/benchmark/: CMakeLists.txt  bench.cpp  call_back_server.hpp  client.cpp  data_gen.cpp  server.cpp  server.hpp
src/coro_rpc/doc/: coro_rpc_doc.hpp  coro_rpc_introduction_cn.md  coro_rpc_introduction_en.md  基于协程和编译期反射的高性能rpc库--coro_rpc.md
src/coro_rpc/examples/: CMakeLists.txt
src/coro_rpc/tests/: BUILD.bazel  CMakeLists.txt  ServerTester.hpp  inject_action.hpp  main.cpp  rpc_api.cpp  rpc_api.hpp  rpc_service.cpp  test_abi_compatible.cpp  test_acceptor.cpp  test_async_rpc_server.cpp  test_client_filter.cpp  test_connection.cpp  test_coro_rpc_client.cpp  test_coro_rpc_server.cpp  test_function_name.cpp  test_gdr.cpp  test_networkdirect_rpc.cpp  test_parallel.cpp  test_register_duplication_1.cpp  test_register_duplication_2.cpp  test_register_duplication_3.cpp  test_register_handler.cpp  test_remote.cpp  test_router.cpp  test_rpc_ssl_mutual_auth.cpp  test_rpc_ssl_reconnect.cpp  test_time_util.cpp  test_util.cpp  test_variadic.cpp
src/coro_ucx/tests/: CMakeLists.txt  test_ucx.cpp
src/easylog/: CMakeLists.txt
src/easylog/benchmark/: CMakeLists.txt  main.cpp
src/easylog/tests/: BUILD.bazel  CMakeLists.txt  test_easylog.cpp
src/metric/tests/: CMakeLists.txt  parallel_test.cpp  parallel_test2.cpp  test_metric.cpp
src/struct_json/: CMakeLists.txt
src/struct_json/examples/: BUILD.bazel  CMakeLists.txt  main.cpp  user_defined_struct.cpp
src/struct_json/tests/: CMakeLists.txt  main.cpp  test_headers.h  test_json.cpp  test_some.cpp
src/struct_pack/: CMakeLists.txt
src/struct_pack/benchmark/: .gitignore  BUILD.bazel  CMakeLists.txt  README.md  ScopedTimer.hpp  bench.hpp  benchmark.cpp  benchmark.proto  config.hpp  data_def.fbs  data_def.hpp  data_def.proto  data_def_generated.h  flatbuffer_sample.hpp  msgpack_sample.hpp  native_pb.hpp  no_op.cpp  no_op.h  protobuf_sample.hpp  protopuf_sample.hpp  protozero_sample.hpp  sample.hpp  struct_pack_sample.hpp  struct_pb_sample.hpp  struct_pb_sample0.hpp
src/struct_pack/doc/: Introduction_CN.md  Introduction_EN.md  Introduction_en.md  struct_pack_doc.hpp  struct_pack_layout_CN.md  struct_pack_layout_EN.md  struct_pack_type_system_CN.md  struct_pack_type_system_EN.md  struct_pack：一个更快更好用的序列化库.md
src/struct_pack/examples/: BUILD.bazel  CMakeLists.txt  basic_usage.cpp  derived_class.cpp  main.cpp  non_aggregated_type.cpp  serialize.cpp  serialize_config.cpp  user_defined_serialization.cpp
src/struct_pack/tests/: BUILD.bazel  CMakeLists.txt  hex_printer.hpp  test_alignas.cpp  test_compatible.cpp  test_compile_time_calculate.cpp  test_cross_platform.cpp  test_data_struct.cpp  test_data_struct2.cpp  test_derived.cpp  test_derived.hpp  test_disable_meta_info.cpp  test_disable_outer_brace.cpp  test_fast_varint.cpp  test_many_members.cpp  test_non_aggregated_type.cpp  test_optimize.cpp  test_pb.cpp  test_pb.handwriting.cpp  test_pb.handwriting.hpp  test_pb.struct_pb.hpp  test_pb_benchmark_struct.cpp  test_pb_oneof.cpp  test_pb_proxy.cpp  test_pragma_pack.cpp  test_pragma_pack_and_alignas_mix.cpp  test_serialize.cpp  test_stream.cpp  test_struct.hpp  test_struct_pb_proxy.cpp  test_tuplet.cpp  test_type_info_config.cpp  test_user_defined_type.cpp  test_varint.cpp
src/struct_pb/: CMakeLists.txt
src/struct_pb/benchmark/: CMakeLists.txt  benchmark.struct_pb.cc  benchmark.struct_pb.h  config.hpp  main.cpp  protobuf_sample.hpp  sample.hpp  struct_pb_sample.hpp
src/struct_pb/conformance/: CMakeLists.txt  binary_json_conformance_suite.cc  binary_json_conformance_suite.h  conformance_cpp.cc  conformance_struct_pb.cc  conformance_test.cc  conformance_test.h  conformance_test_main.cc  conformance_test_runner.cc  failure_list_cpp.txt
src/struct_pb/doc/: struct-pb-api.md  struct-pb-guide-proto3.md  struct-pb-intro.md  struct-pb-quick-start.md  struct-pb-supported-features.md
src/struct_pb/examples/: CMakeLists.txt  addressbook.proto  demo.proto  main.cpp  tutorial.cpp
src/struct_pb/protoc-plugin/: CMakeLists.txt  EnumFieldGenerator.cpp  EnumFieldGenerator.h  EnumGenerator.cpp  EnumGenerator.h  FieldGenerator.cpp  FieldGenerator.h  FileGenerator.cpp  FileGenerator.h  GeneratorBase.cpp  GeneratorBase.h  MapFieldGenerator.cpp  MapFieldGenerator.h  MessageFieldGenerator.cpp  MessageFieldGenerator.h  MessageGenerator.cpp  MessageGenerator.h  OneofFieldGenerator.cpp  OneofFieldGenerator.h  Options.hpp  PrimitiveFieldGenerator.cpp  PrimitiveFieldGenerator.h  StringFieldGenerator.cpp  StringFieldGenerator.h  main.cpp  (+4 more)
src/struct_xml/: CMakeLists.txt
src/struct_yaml/: CMakeLists.txt
(+1190 files in other folders)
