cc_binary(
    name = "coro_http_example",
    srcs =
        [
            "example.cpp",
        ],
    copts = [
        "-std=c++20",
    ],
    deps = ["//:ylt"],
)

cc_binary(
    name = "coro_http_channel",
    srcs =
        [
            "channel.cpp",
        ],
    copts = [
        "-std=c++20",
    ],
    deps = ["//:ylt"],
)
